documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.VB

    Public Declare Function L43_ChDARRdW Lib "L43W32.DLL" Alias "_L43_ChDARRdW@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_ChDARSet Lib "L43W32.DLL" Alias "_L43_ChDARSet@16" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_ChDARWrL Lib "L43W32.DLL" Alias "_L43_ChDARWrL@16" (ByVal value As UInt32, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_ChDARWrW Lib "L43W32.DLL" Alias "_L43_ChDARWrW@16" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_ChStart Lib "L43W32.DLL" Alias "_L43_ChStart@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ChStop Lib "L43W32.DLL" Alias "_L43_ChStop@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CmdAddr Lib "L43W32.DLL" Alias "_L43_CmdAddr@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_CmdAlloc Lib "L43W32.DLL" Alias "_L43_CmdAlloc@8" (ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_CmdAllocEx Lib "L43W32.DLL" Alias "_L43_CmdAllocEx@12" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_CmdBaseRd Lib "L43W32.DLL" Alias "_L43_CmdBaseRd@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_CmdBaseWr Lib "L43W32.DLL" Alias "_L43_CmdBaseWr@12" (ByVal addrval As UInt32, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_CmdClear Lib "L43W32.DLL" Alias "_L43_CmdClear@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CmdCountRd Lib "L43W32.DLL" Alias "_L43_CmdCountRd@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_CmdCountWr Lib "L43W32.DLL" Alias "_L43_CmdCountWr@12" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_CmdCtrlRd Lib "L43W32.DLL" Alias "_L43_CmdCtrlRd@12" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_CmdCtrlWr Lib "L43W32.DLL" Alias "_L43_CmdCtrlWr@16" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_CmdCurrRd Lib "L43W32.DLL" Alias "_L43_CmdCurrRd@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_CmdCurrWr Lib "L43W32.DLL" Alias "_L43_CmdCurrWr@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_CmdInit Lib "L43W32.DLL" Alias "_L43_CmdInit@8" (ByVal opcode As UInt16, ByRef block As UInt16)
    Public Declare Function L43_CmdInsert Lib "L43W32.DLL" Alias "_L43_CmdInsert@12" (ByRef block As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CmdMaxRd Lib "L43W32.DLL" Alias "_L43_CmdMaxRd@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_CmdMaxWr Lib "L43W32.DLL" Alias "_L43_CmdMaxWr@12" (ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_CmdRd Lib "L43W32.DLL" Alias "_L43_CmdRd@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CmdShotWr Lib "L43W32.DLL" Alias "_L43_CmdShotWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CmdSkipWr Lib "L43W32.DLL" Alias "_L43_CmdSkipWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_CmdStackClr Lib "L43W32.DLL" Alias "_L43_CmdStackClr@8" (ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_CmdStartRd Lib "L43W32.DLL" Alias "_L43_CmdStartRd@8" (ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_CmdStartWr Lib "L43W32.DLL" Alias "_L43_CmdStartWr@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_CmdStepWr Lib "L43W32.DLL" Alias "_L43_CmdStepWr@16" (ByVal value As Int32, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CmdTotalRd Lib "L43W32.DLL" Alias "_L43_CmdTotalRd@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_CmdTotalWr Lib "L43W32.DLL" Alias "_L43_CmdTotalWr@12" (ByVal countval As Int32, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_CmdWr Lib "L43W32.DLL" Alias "_L43_CmdWr@12" (ByRef block As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CommCall Lib "L43W32.DLL" Alias "_L43_CommCall@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CommCheck Lib "L43W32.DLL" Alias "_L43_CommCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CommDisable Lib "L43W32.DLL" Alias "_L43_CommDisable@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CommDisableEx Lib "L43W32.DLL" Alias "_L43_CommDisableEx@8" (ByVal command As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CommEnable Lib "L43W32.DLL" Alias "_L43_CommEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CommRdL Lib "L43W32.DLL" Alias "_L43_CommRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_CommRdsW Lib "L43W32.DLL" Alias "_L43_CommRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_CommRdW Lib "L43W32.DLL" Alias "_L43_CommRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_CommRun Lib "L43W32.DLL" Alias "_L43_CommRun@20" (ByRef dataptr As UInt16, ByVal datacount As UInt16, ByRef codeptr As UInt16, ByVal codecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_CommWrL Lib "L43W32.DLL" Alias "_L43_CommWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_CommWrsW Lib "L43W32.DLL" Alias "_L43_CommWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L43_CommWrW Lib "L43W32.DLL" Alias "_L43_CommWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_ConvFromArinc Lib "L43W32.DLL" Alias "_L43_ConvFromArinc@4" (ByVal msgval As UInt32) As UInt32
    Public Declare Function L43_ConvToArinc Lib "L43W32.DLL" Alias "_L43_ConvToArinc@4" (ByVal msgval As UInt32) As UInt32
    Public Declare Sub L43_DARClr Lib "L43W32.DLL" Alias "_L43_DARClr@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L43_DARGet Lib "L43W32.DLL" Alias "_L43_DARGet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DARRdL Lib "L43W32.DLL" Alias "_L43_DARRdL@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L43_DARRdW Lib "L43W32.DLL" Alias "_L43_DARRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_DARSet Lib "L43W32.DLL" Alias "_L43_DARSet@12" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L43_DARWrL Lib "L43W32.DLL" Alias "_L43_DARWrL@12" (ByVal value As UInt32, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub L43_DARWrW Lib "L43W32.DLL" Alias "_L43_DARWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function L43_Div Lib "L43W32.DLL" Alias "_L43_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
    Public Declare Function L43_DllUsageCount Lib "L43W32.DLL" Alias "_L43_DllUsageCount@0" () As Int32
    Public Declare Function L43_DPMMRdW Lib "L43W32.DLL" Alias "_L43_DPMMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_DPMMWrW Lib "L43W32.DLL" Alias "_L43_DPMMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_DPMRdB Lib "L43W32.DLL" Alias "_L43_DPMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_DPMRdL Lib "L43W32.DLL" Alias "_L43_DPMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub L43_DPMRdsL Lib "L43W32.DLL" Alias "_L43_DPMRdsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_DPMRdsW Lib "L43W32.DLL" Alias "_L43_DPMRdsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Function L43_DPMRdW Lib "L43W32.DLL" Alias "_L43_DPMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub L43_DPMWrB Lib "L43W32.DLL" Alias "_L43_DPMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L43_DPMWrL Lib "L43W32.DLL" Alias "_L43_DPMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub L43_DPMWrsL Lib "L43W32.DLL" Alias "_L43_DPMWrsL@16" (ByRef valueptr As UInt32, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_DPMWrsW Lib "L43W32.DLL" Alias "_L43_DPMWrsW@16" (ByRef valueptr As UInt16, ByVal addrval As UInt32, ByVal countval As Int32, ByVal handleval As UInt32)
    Public Declare Sub L43_DPMWrW Lib "L43W32.DLL" Alias "_L43_DPMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function L43_DspBioRd Lib "L43W32.DLL" Alias "_L43_DspBioRd@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function L43_DspHmClear Lib "L43W32.DLL" Alias "_L43_DspHmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DspHmSet Lib "L43W32.DLL" Alias "_L43_DspHmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DspIntfClear Lib "L43W32.DLL" Alias "_L43_DspIntfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DspIntfRead Lib "L43W32.DLL" Alias "_L43_DspIntfRead@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DspIntmClear Lib "L43W32.DLL" Alias "_L43_DspIntmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DspIntmSet Lib "L43W32.DLL" Alias "_L43_DspIntmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DspXfClear Lib "L43W32.DLL" Alias "_L43_DspXfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_DspXfSet Lib "L43W32.DLL" Alias "_L43_DspXfSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L43_ErrDesc Lib "L43W32.DLL" Alias "_L43_ErrDesc@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L43_ErrDescStr Lib "L43W32.DLL" Alias "_L43_ErrDescStr@4" (ByVal errval As Int32) As UInt32
    Public Declare Function L43_ErrName Lib "L43W32.DLL" Alias "_L43_ErrName@4" (ByVal errval As Int32) As UInt32
